content: remove placeholder content and update blog with recent projects

--- a/docs/blog/300-days-2025.md
+++ b/docs/blog/300-days-2025.md
@@ -29,7 +29,7 @@ The goal remains consistent: dedicated coding effort. However, the definition of
 
 ## Challenge Structure
 
-- **LeetCode**: Daily challenges (code in `/leetcode/`, certificates in `/certs/leetcode/`)
+- **LeetCode**: Daily challenges
 - **Bootcamps**: Each bootcamp tracked as a submodule
 - **Projects**: Larger projects get their own folders
 - **Milestones**: Progress logged via sprint highlights & project completions, not daily standups
@@ -59,12 +59,6 @@ Daily AWS practice log exploring networking, IAM, containers, and GenAI on the c
 
 [Project Repo →](https://github.com/Ramsi-K/100-days-of-cloud-2025)
 
-### Kiroween Hackathon — Skeleton Structure Track
-
-Building a lightweight MCP-compliant note reader inspired by GoodReader/Notion. Focus: PDF parsing, highlight detection, and automated note syncing to Notion.
-
-[Project Repo →](https://github.com/Ramsi-K/kiroween-skeleton)
-
 ### LangGraph Mini Project (Planned)
 
 Short RAG-based build to showcase agent orchestration with LangChain + LangGraph. Goal: add one polished, industry-relevant LLM project for job readiness.
@@ -74,6 +68,34 @@ Short RAG-based build to showcase agent orchestration with LangChain + LangGraph
 ## Completed Projects & Outcomes
 
 <div class="section-label">Major Achievements</div>
+
+### Yoga Assistant Knowledge RAG (Nov 2025)
+
+End-to-end retrieval-augmented generation system for yoga knowledge with rigorous evaluation and production deployment.
+
+- Achieved 23% MRR improvement through hybrid retrieval (BM25 + vector search)
+- Benchmarked 5 LLMs with 3 prompt templates (15 combinations) on ground truth questions
+- Selected DeepSeek-V3 for 90% relevant answer rate
+- Demonstrated that query rewriting and re-ranking can degrade performance
+- Production deployment with PostgreSQL logging and Grafana monitoring (7 visualization panels)
+
+**Tech stack**: Python, BM25, sentence-transformers, DeepSeek-V3, PostgreSQL, Grafana, Docker
+
+→ [Project Repo](https://github.com/Ramsi-K/yoga-assistant-knowledge-rag)
+
+### Dynamic Knowledge Graph Agents (Nov 2025)
+
+Multi-agent system that transforms unstructured text into structured, visual knowledge graphs using Google ADK and code execution.
+
+- Sequential agent pipeline: ResearchAgent → OntologyAgent → VisualizationAgent
+- Extracts structured triplets (Subject → Predicate → Object) from natural language
+- Generates interactive visualizations with multiple layout algorithms (Barnes Hut, Force Atlas 2, Hierarchical)
+- Custom observability plugin for metrics tracking
+- Streamlit frontend with FastAPI backend
+
+**Tech stack**: Google ADK, Gemini 2.5 Flash, NetworkX, Matplotlib, FastAPI, Streamlit
+
+→ [Project Repo](https://github.com/Ramsi-K/dynamic-knowledge-graph-agents)
 
 ### EdgeMind — AWS Agents Hackathon (Oct 2025)
 
